{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 27,
  "lineage": "22b33640-81ae-2733-bffa-dedee831aab1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048054c328515a31d",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-085e34eebd4453848",
            "domain": "vpc",
            "id": "eipalloc-048054c328515a31d",
            "instance": "i-037f22d27c1c85ff1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0974c02fdc9ef7fd4",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-84-171-223.compute-1.amazonaws.com",
            "public_ip": "3.84.171.223",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.interface",
            "aws_security_group.allow_web",
            "aws_subnet.subnetting",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:992382492065:instance/i-037f22d27c1c85ff1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037f22d27c1c85ff1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0974c02fdc9ef7fd4"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0974c02fdc9ef7fd4",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "3.84.171.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08fc74d947d52d6c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a0a618f33c634aa",
            "tags": {
              "Name": "Grad Student"
            },
            "tags_all": {
              "Name": "Grad Student"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a192318d80072326"
            ]
          },
          "dependencies": [
            "aws_network_interface.interface",
            "aws_security_group.allow_web",
            "aws_subnet.subnetting",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382492065:internet-gateway/igw-01a3b095684ed4b9e",
            "id": "igw-01a3b095684ed4b9e",
            "owner_id": "992382492065",
            "tags": {
              "Name": "gatewayforint"
            },
            "tags_all": {
              "Name": "gatewayforint"
            },
            "vpc_id": "vpc-04cad25761a0ac956"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382492065:network-interface/eni-0974c02fdc9ef7fd4",
            "attachment": [
              {
                "attachment_id": "eni-attach-02197431fe4ee7076",
                "device_index": 0,
                "instance": "i-037f22d27c1c85ff1"
              }
            ],
            "id": "eni-0974c02fdc9ef7fd4",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:2c:d3:21:93:db",
            "owner_id": "992382492065",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a192318d80072326"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a0a618f33c634aa"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnetting",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382492065:route-table/rtb-02df7570f1875945a",
            "id": "rtb-02df7570f1875945a",
            "owner_id": "992382492065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a3b095684ed4b9e",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a3b095684ed4b9e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mycustomroutetable"
            },
            "tags_all": {
              "Name": "mycustomroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cad25761a0ac956"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0982f81b2964e4d5b",
            "route_table_id": "rtb-02df7570f1875945a",
            "subnet_id": "subnet-08a0a618f33c634aa"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.routetable",
            "aws_subnet.subnetting",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382492065:security-group/sg-0a192318d80072326",
            "description": "allow web traffic from three ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a192318d80072326",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "worldwide",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "worldwide",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "worldwide",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "992382492065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cad25761a0ac956"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382492065:subnet/subnet-08a0a618f33c634aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a0a618f33c634aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382492065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetting"
            },
            "tags_all": {
              "Name": "subnetting"
            },
            "vpc_id": "vpc-04cad25761a0ac956"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382492065:vpc/vpc-04cad25761a0ac956",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aed2546987ba4bb6",
            "default_route_table_id": "rtb-0b4b7814badba44ab",
            "default_security_group_id": "sg-08bf8f8b9c6e3aa00",
            "dhcp_options_id": "dopt-076539d1f01f98755",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04cad25761a0ac956",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4b7814badba44ab",
            "owner_id": "992382492065",
            "tags": {
              "Name": "vpcforautomation"
            },
            "tags_all": {
              "Name": "vpcforautomation"
            }
          }
        }
      ]
    }
  ]
}